bk_ida/gobmkida/c2/ping_recurse
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/ping_recurse/src/engine/worm.c:1823:28: error: use of undeclared identifier 'byte_9B389F'
&& v9 != ( unsigned __int8)byte_9B389F[v12] 
                           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/ping_recurse/src/engine/worm.c:1824:28: error: use of undeclared identifier 'byte_9B388C'
&& v9 != ( unsigned __int8)byte_9B388C[v12] 
                           ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/ping_recurse/src/obj/1/worm.o] Error 1
